Fix Presto images jumping issue

--- a/css/old-device-style.css
+++ b/css/old-device-style.css
@@ -1,9 +1,3 @@
-/* remove loading screen*/
-#loading{
-    z-index: -10;
-    visibility: hidden;
-}
-
 body {
     margin: 0;
     background: #fff;
@@ -11,7 +5,8 @@ body {
 }
 
 img{
-    background-color: black;
+    width: 100px;
+    height: 100px;
 }
 
 footer{
@@ -40,7 +35,7 @@ footer{
 }
 
 .images-block{
-    width: 622px;
+    width: 625px;
     background-color: #414140;
     z-index: 1;
     border-radius: 20px;
@@ -49,7 +44,7 @@ footer{
     position: relative;
     margin: auto;
     margin-top: 60px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .top-menu{    
@@ -96,7 +91,8 @@ footer{
     width: 100px;
     position: relative;
     display: inline-block;
-
+    background-color: black;
+    border-radius: 7px;
 }
 
 .finded{
@@ -117,11 +113,6 @@ footer{
     opacity: 0;
 }
 
-img{
-    height: 100%;
-    border-radius: 7px;
-
-}
 
 #black-display{
     width: 100%;
@@ -179,7 +170,7 @@ img{
 }
 
 #final-time{
-    width: 120px;
+    width: 130px;
     position: absolute;
     left: 107px;
     bottom: 85px;
@@ -245,4 +236,10 @@ img{
     background-color: #414140;
     border-color: #a1a1a1;   
     opacity: 0.7;
+}
+
+/* remove loading screen*/
+#loading{
+    z-index: -10;
+    visibility: hidden;
 }
